# Spring_draft

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CompileScoreSettings.json
DevShaders/ColoredTriangle/: coloredTriangle.frag  coloredTriangle.vert  compile.bat  frag.spv  vert.spv
Spring/: CMakeLists.txt  Spring.cpp  Spring.h
Spring/SpringAudio/: CMakeLists.txt
Spring/SpringAudio/include/Spring/SpringAudio/: ISpringAudioApi.hpp  SpringAudio.hpp  SpringAudioDevice.hpp  SpringAudioModule.hpp  SpringAudioSource.hpp
Spring/SpringAudio/src/: SpringAudioApi.cpp  SpringAudioApi_NativeWindows.cpp  SpringAudioApi_NativeWindows.hpp  SpringAudioDevice_NativeWindows.cpp  SpringAudioDevice_NativeWindows.hpp  SpringAudioModule.cpp
Spring/SpringCore/: CMakeLists.txt
Spring/SpringCore/include/Spring/SpringCore/: SpringApplication.hpp  SpringCommon.hpp  SpringCore.hpp  SpringMisc.hpp  SpringModule.hpp  SpringPlatform.hpp  SpringProfiler.hpp  SpringResourceManager.hpp  SpringTime.hpp  pch.hpp
Spring/SpringCore/src/: SpringApplication.cpp  SpringCommon.cpp  SpringMisc.cpp  SpringModule.cpp  SpringPlatform.cpp  SpringProfiler.cpp  SpringResourceManager.cpp  SpringTime.cpp  pch.hpp
Spring/SpringCore/tests/: main.cpp  test1.cpp
Spring/SpringDNA/: CMakeLists.txt
Spring/SpringDNA/src/: buildDNA.cpp  structs.hpp
Spring/SpringGraphics/: CMakeLists.txt
Spring/SpringGraphics/include/Spring/SpringGraphics/: ISpringGraphicsApi.hpp  ISpringWindow.hpp  SpringGraphics.hpp  SpringGraphicsApi_Vulkan.hpp  SpringGraphicsCommon.hpp  SpringGraphicsDevice.hpp  SpringGraphicsDevice_Gl.hpp  SpringGraphicsDevice_Vk.hpp  SpringGraphicsDevice_Vulkan.hpp  SpringGraphicsModule.hpp  SpringGraphicsResources.hpp  SpringGraphicsVulkanUtils.hpp  SpringRenderer.hpp  SpringWindow.hpp  SpringWindow_Glfw.hpp  SpringWindow_Native.hpp  SpringWindow_Win32.hpp  pch.hpp
Spring/SpringGraphics/src/: ISpringGraphicsApi.cpp  SpringGraphicsApi_Vulkan.cpp  SpringGraphicsApi_Vulkan.hpp  SpringGraphicsDevice_Gl.cpp  SpringGraphicsDevice_Vk.cpp  SpringGraphicsDevice_Vk_private.hpp  SpringGraphicsDevice_Vulkan.cpp  SpringGraphicsDevice_Vulkan.hpp  SpringGraphicsModule.cpp  SpringGraphicsResources.hpp  SpringRenderer.cpp  SpringWindow.cpp  SpringWindow_Glfw.cpp  SpringWindow_Native.cpp  SpringWindow_Win32.cpp  pch.hpp
Spring/SpringMath/: CMakeLists.txt
Spring/SpringMath/include/Spring/SpringMath/: SpringVector3.hpp  SpringVector3d.hpp  pch.hpp
Spring/SpringMath/src/: SpringVector3.cpp  pch.hpp
SpringEditor/: CMakeLists.txt
SpringEditor/src/: SpringEditor.cpp  SpringEditorApplication.cpp  SpringEditorApplication.hpp
lib/utfconv/: CMakeLists.txt
lib/utfconv/src/: utf_winfunc.c  utfconv.c
